        - implemented the copying of the '_atom_type_symbol' and
          '_atom_type_oxidation_number' data items from the input
          file to the output file.
        - started recoding the space group IT number of
          the input crystal structure in the output as
          the '_cod_molecule_space_group_IT_number' data item.
    - dependency installer for Fedora 36.
  * Changed:
    - cif_ddlm_dic_check:
        - updated the checks to no longer report the presence of
          the '_category_key.name' attribute in Set category
          definitions as incorrect.
  * Fixed:
    - COD::Spacegroups::Lookup::COD:
        - changed the space group IT number in the descriptions of
          the 'F d 1 1', 'F 1 d 1', 'F 1 1 d' and 'C 1 c 1 (a-3/8,b-3/8,a+2*c)'
          space groups from '15' to '9'.
    - cif_cod_check:
        - added the missing File::Basename::dirname() subroutine import.
    - cif_ddlm_dic_check:
        - corrected a validation message describing category key items
          that do not belong to the given category.
    - cif_hkl_COD_number:
        - added the missing COD::SOptions::get_value() subroutine import.
    - cif_split:
        - added the missing COD::SOptions::get_value() subroutine import.
    - cod2rdf:
        - added the missing COD::CIF::JSON::cif2json() subroutine import.
    - ddlm_validate:
        - updated the looped subcategory recognition to also consider
          the '_category_key.name' attribute.
    - sdf_add_cod_data:
        - updated the handling of the <PUBCHEM_SUBSTANCE_COMMENT> data item
          to not exclude fields that contain empty parentheses.
        - updated the handling of the <PUBCHEM_SUBSTANCE_COMMENT> data item
          to not unintentionally remove various text sequences like
          "?-", "?-?", "(?)", etc.
  * Removed:
    - dependency installer for Fedora 34.

cod-tools (3.5.0)

  * Added:
    - COD::AtomNeighbours:
        - neighbour_list_to_chemistry_mol() subroutine.