@@ -9,6 +9,7 @@ cod-tools (unreleased)
           the input crystal structure in the output as
           the '_cod_molecule_space_group_IT_number' data item.
     - dependency installer for Fedora 36.
+    - dependency installer for LinuxMint 21.
   * Changed:
     - cif_ddlm_dic_check:
         - updated the checks to no longer report the presence of
